--- a/src/client/scss/base/_reset.scss
+++ b/src/client/scss/base/_reset.scss
@@ -8,7 +8,7 @@
   font-family: $font;
 }
 
-textarea {
+input {
   @extend .padding-small;
   @extend .border-radius;
   @extend .border;
@@ -21,7 +21,7 @@ button {
 }
 
 label {
-  padding: 5px 0;
+  padding: 10px 0 2px 0;
 }
 
 ul {
