--- a/src/client/scss/modifiers/_modifiers.scss
+++ b/src/client/scss/modifiers/_modifiers.scss
@@ -35,6 +35,14 @@
   padding: 5px 10px;
 }
 
+.padding-medium {
+  padding: 15px;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .border {
   border: 1px solid $color-border;
 }
