--- a/src/client/js/components/trip-form/trip-form.component.html
+++ b/src/client/js/components/trip-form/trip-form.component.html
@@ -1,6 +1,9 @@
 <form name="text-entry" autocomplete="off" class="section">
   <div class="column">
-    
+
+    <label class="color-primary" for="name">Name</label>
+    <input type="text" class="shadow" name="name" id="name" required/>    
+
     <label class="color-primary" for="location">Destination</label>
     <input type="text" class="shadow" name="location" id="location" required/>
     
