--- a/src/client/js/components/trip-list/trip-list.component.html
+++ b/src/client/js/components/trip-list/trip-list.component.html
@@ -1,4 +1,4 @@
-<section class="section can-hide hidden" id="analysis-container">
-  <ul class="list">
-  </ul>
-</section>
+<ul class="list shadow" id="list">
+  <li id="title" class="list__title bg-primary text-center"><h2>saved trips</h2></li>
+  <li class="list__item"><p><strong>Trip to Romania</strong></p><p>Bucarest (01/01/2001 - 01/01/2001)</p><button>&#10005;</button></li>
+</ul>
