Add card component

--- a/src/client/scss/index.scss
+++ b/src/client/scss/index.scss
@@ -4,5 +4,6 @@
 @import './layout/layout';
 @import './modules/header';
 @import './modules/section';
+@import './modules/card';
 @import './modules/list';
 @import './modules/loader';
