--- a/src/client/scss/modifiers/_modifiers.scss
+++ b/src/client/scss/modifiers/_modifiers.scss
@@ -39,6 +39,14 @@
   padding: 15px;
 }
 
+.margin-small {
+  margin: 5px 10px;
+}
+
+.margin-medium {
+  margin: 15px;
+}
+
 .text-center {
   text-align: center;
 }
