Refactor trip form component

--- a/src/client/js/components/trip-form/trip-form.component.html
+++ b/src/client/js/components/trip-form/trip-form.component.html
@@ -7,11 +7,11 @@
     <label class="color-primary" for="location">Destination</label>
     <input type="text" class="shadow" name="location" id="location" required/>
     
-    <label class="color-primary" for="startDate">Start date</label>
-    <input type="date" class="shadow" name="startDate" id="startDate" required/>
+    <label class="color-primary" for="start-date">Start date</label>
+    <input type="date" class="shadow" name="start-date" id="start-date" required/>
     
-    <label class="color-primary" for="endDate">End date</label>
-    <input type="date" class="shadow" name="endDate" id="endDate" required/>
+    <label class="color-primary" for="end-date">End date</label>
+    <input type="date" class="shadow" name="end-date" id="end-date" required/>
 
   </div>
   <button id="submit" type="submit" class="section__button bg-primary shadow">Create trip</button>
