Add styles, refactor components and service logic

--- a/src/client/js/components/trip-form/trip-form.component.html
+++ b/src/client/js/components/trip-form/trip-form.component.html
@@ -1,18 +1,16 @@
-<form name="text-entry" autocomplete="off" class="section">
-  <div class="column">
+<form name="text-entry" autocomplete="off" class="form">
 
-    <label class="color-primary" for="name">Name</label>
+    <label class="color-primary padding-small" for="name">Name</label>
     <input type="text" class="shadow" name="name" id="name" required/>    
 
-    <label class="color-primary" for="location">Destination</label>
+    <label class="color-primary padding-small" for="location">Destination</label>
     <input type="text" class="shadow" name="location" id="location" required/>
     
-    <label class="color-primary" for="start-date">Start date</label>
+    <label class="color-primary padding-small" for="start-date">Start date</label>
     <input type="date" class="shadow" name="start-date" id="start-date" required/>
     
-    <label class="color-primary" for="end-date">End date</label>
+    <label class="color-primary padding-small" for="end-date">End date</label>
     <input type="date" class="shadow" name="end-date" id="end-date" required/>
 
-  </div>
-  <button id="submit" type="submit" class="section__button bg-primary shadow">Create trip</button>
+  <button id="submit" type="submit" class="form__button bg-primary shadow margin-medium">Create trip</button>
 </form>
