Refactor style, add alert class and hidden classes

--- a/src/client/scss/base/_reset.scss
+++ b/src/client/scss/base/_reset.scss
@@ -20,6 +20,13 @@ button {
   @extend .border-radius;
 }
 
+a {
+  @extend .padding-small;
+  @extend .border-radius;
+  text-decoration: none;
+}
+
+
 label {
   padding: 10px 0 2px 0;
 }
