--- a/src/client/scss/index.scss
+++ b/src/client/scss/index.scss
@@ -3,7 +3,5 @@
 @import './base/reset';
 @import './layout/layout';
 @import './modules/header';
-@import './modules/section';
-@import './modules/card';
-@import './modules/list';
 @import './modules/loader';
+@import './modules/alert';
