--- a/src/client/scss/base/_base.scss
+++ b/src/client/scss/base/_base.scss
@@ -3,7 +3,9 @@
   src: url('/src/assets/fonts/Roboto-Regular.ttf') format('ttf');
 }
 
-$color-primary: rgb(10, 104, 133);
+$color-primary: rgb(30, 126, 155);
+$color-danger: rgb(230, 90, 90);
+$color-success: rgb(88, 194, 78);
 $color-primary-contrast: rgb(255, 255, 255);
 $color-border: silver;
 $font: 'Roboto', sans-serif;
