Add format to dates, refactor form style

--- a/src/client/js/components/trip-form/trip-form.component.html
+++ b/src/client/js/components/trip-form/trip-form.component.html
@@ -12,5 +12,5 @@
     <label class="color-primary padding-small" for="end-date">End date</label>
     <input type="date" class="shadow" name="end-date" id="end-date" required/>
 
-  <button id="submit" type="submit" class="form__button bg-primary shadow margin-medium">Create trip</button>
+  <button id="submit" type="submit" class="bg-primary padding-medium margin-medium shadow">Create trip</button>
 </form>
