Improve trip card component

--- a/src/client/js/components/trip-card/trip-card.component.scss
+++ b/src/client/js/components/trip-card/trip-card.component.scss
@@ -4,7 +4,8 @@
   @extend .border;
   @extend .border-radius;
   @extend .column;
-  max-width: 400px;
+  max-width: 500px;
+  min-width: 300px;
   margin: 20px;
 
 
