--- a/src/client/js/components/trip-card/trip-card.component.html
+++ b/src/client/js/components/trip-card/trip-card.component.html
@@ -3,10 +3,11 @@
   </figure>
   <p class="margin-small"><strong id="name"></strong></p>
   <p class="margin-small"><strong>Location: </strong><span id="location"></span></p>
-  <p><strong>From: </strong><span id="start-date"></span><strong> To: </strong> <span id="end-date"></span></p>
+  <p><strong>From: </strong><span id="start-date"></span><strong> To: </strong><span id="end-date"></span></p>
   <div class="row">
-    <button id="remove" class="padding-medium margin-medium">&#10005;</button>
-    <button id="done" class="padding-medium margin-medium ">&#10003;</button>
-    <button class="padding-medium margin-medium ">&#9783;</button>
+    <button id="remove" class="can-hide-absent padding-medium margin-medium">&#10005;</button>
+    <!-- TODO: ADD THIS FEATURE LATER -->
+    <!-- <button id="done" class="padding-medium margin-medium ">&#10003;</button> -->
+    <button id="view" class="can-hide-absent padding-medium margin-medium">&#9783;</button>
   </div>
 </div>
