Improve trip list component with composition

--- a/src/client/js/components/trip-list/trip-list.component.html
+++ b/src/client/js/components/trip-list/trip-list.component.html
@@ -1,3 +1,5 @@
+
 <ul class="list shadow" id="list">
-  <li id="title" class="list__title bg-primary text-center"><h2>saved trips</h2></li>
+  <!-- TODO: ADD THIS FEATURE LATER -->
+  <!-- <li id="title" class="list__title bg-primary text-center"><h2>Weather</h2></li> -->
 </ul>
