--- a/src/client/js/components/trip-list/trip-list.component.html
+++ b/src/client/js/components/trip-list/trip-list.component.html
@@ -1,5 +1,5 @@
-
-<ul class="list shadow" id="list">
-  <!-- TODO: ADD THIS FEATURE LATER -->
-  <!-- <li id="title" class="list__title bg-primary text-center"><h2>Weather</h2></li> -->
-</ul>
+<div class="column border border-radius">
+    <h2 id="title" class="list__title bg-primary text-center can-hide-absent hidden"></h2>
+    <ul class="list shadow collapsable" id="list">
+    </ul>
+</div>
