Remove user agent dark background, improve layout

--- a/src/client/scss/base/_reset.scss
+++ b/src/client/scss/base/_reset.scss
@@ -12,7 +12,15 @@ input {
   @extend .padding-small;
   @extend .border-radius;
   @extend .border;
+  background-color: white;
   width: 100%;
+}
+
+select {
+  @extend .padding-small;
+  @extend .border-radius;
+  @extend .border;
+  background-color: white;
 }
 
 
