Boostrap router, add detail logic, refactor

--- a/src/client/js/components/trip-form/trip-form.component.html
+++ b/src/client/js/components/trip-form/trip-form.component.html
@@ -1,15 +1,15 @@
 <form name="text-entry" autocomplete="off" class="form">
 
-  <label class="color-primary padding-small" for="name">Name</label>
-  <input type="text" class="shadow" name="name" id="name" required/>    
+  <label class="color-primary margin-small" for="name">Name</label>
+  <input type="text" class="shadow" name="name" id="name" required/>
 
-  <label class="color-primary padding-small" for="location">Destination</label>
+  <label class="color-primary margin-small" for="location">Destination</label>
   <input type="text" class="shadow" name="location" id="location" required/>
-  
-  <label class="color-primary padding-small" for="start-date">Start date</label>
+
+  <label class="color-primary margin-small" for="start-date">Start date</label>
   <input type="date" class="shadow" name="start-date" id="start-date" required/>
-  
-  <label class="color-primary padding-small" for="end-date">End date</label>
+
+  <label class="color-primary margin-small" for="end-date">End date</label>
   <input type="date" class="shadow" name="end-date" id="end-date" required/>
 
   <button id="submit" type="submit" class="bg-primary padding-medium margin-medium shadow">Create trip</button>
