Refactor, add edit route

--- a/src/client/js/components/trip-card/trip-card.component.html
+++ b/src/client/js/components/trip-card/trip-card.component.html
@@ -9,5 +9,6 @@
     <!-- TODO: ADD THIS FEATURE LATER -->
     <!-- <button id="done" class="padding-medium margin-medium ">&#10003;</button> -->
     <button id="view" class="can-hide-absent padding-medium margin-medium">&#9783;</button>
+    <button id="edit" class="can-hide-absent padding-medium margin-medium">edit</button>
   </div>
 </div>
