--- a/src/client/scss/modules/_alert.scss
+++ b/src/client/scss/modules/_alert.scss
@@ -5,4 +5,13 @@
     @extend .padding-medium;
     @extend .margin-medium;
     @extend .shadow;
+    width: 100%;
+
+    .alert__button {
+        margin: 0 10px !important;
+        &:hover {
+            background-color: darkgray !important;
+            color: white !important;
+        }
+    }
 }
