Add pagenav as  BEM block

--- a/src/client/scss/index.scss
+++ b/src/client/scss/index.scss
@@ -3,4 +3,5 @@
 @import './modules/header';
 @import './modules/loader';
 @import './modules/alert';
+@import './modules/pagenav';
 @import './modules/toast';
