Add style to trip detail component buttons

--- a/src/client/js/components/trip-detail/trip-detail.component.html
+++ b/src/client/js/components/trip-detail/trip-detail.component.html
@@ -2,8 +2,8 @@
   <div class="alert bg-primary shadow row">
     <p>Details</p>
     <div class="row">
-      <button id="add-detail-btn" class="alert__button padding-small">&#10005; Add</button>
-      <button id="remove-all-btn" class="alert__button padding-small">&#10005; Remove all</button>
+      <button id="add-detail-btn" class="alert__button padding-small shadow">&#10005; Add</button>
+      <button id="remove-all-btn" class="alert__button padding-small shadow">&#10005; Remove all</button>
     </div>
   </div>
   <div id="details-container" class="page">
