Change trip model, switch to element name selector

--- a/src/client/js/components/add-page/add-page.component.html
+++ b/src/client/js/components/add-page/add-page.component.html
@@ -4,6 +4,6 @@
       Create a new trip
     </p>
   </div>
-  <trip-form id="trip-form"></trip-form>
-  <div id="loader" class="loader can-hide-present hidden"></div>
+  <trip-form></trip-form>
+  <div class="loader can-hide-present hidden"></div>
 </section>
