Complete edit page

--- a/src/client/js/components/trip-detail/trip-detail.component.html
+++ b/src/client/js/components/trip-detail/trip-detail.component.html
@@ -2,8 +2,8 @@
   <div class="alert bg-primary shadow row">
     <p>Details</p>
     <div class="row">
-      <button id="add-detail-btn" class="alert__button padding-small shadow">&#10005; Add</button>
-      <button id="remove-all-btn" class="alert__button padding-small shadow">&#10005; Remove all</button>
+      <button id="add-detail-btn" class="alert__button padding-small shadow">Add</button>
+      <button id="remove-all-btn" class="alert__button padding-small shadow">Remove all</button>
     </div>
   </div>
   <div id="details-container" class="page">
@@ -11,6 +11,7 @@
   <p id="no-details-text" class="can-hide-absent">Start by adding some details to your trip!</p>
   <button id="save-btn" class="bg-primary margin-medium padding-medium shadow can-hide-absent hidden">Save details</button>
 </div>
+
 <template id="form-control">
   <div class="column detail can-hide-absent hidden">
     <div class="row">
