--- a/src/client/js/components/edit-page/edit-page.component.html
+++ b/src/client/js/components/edit-page/edit-page.component.html
@@ -4,6 +4,6 @@
     <button class="bg-primary padding-small">Details</button>
   </div>
   <trip-form class="can-hide-absent hidden"></trip-form>
-  <trip-detail class="page can-hide-absent hidden" id="trip-details"></trip-detail>
-  <div id="loader" class="loader can-hide-present hidden"></div>
+  <trip-detail class="page can-hide-absent hidden"></trip-detail>
+  <div class="loader can-hide-present hidden"></div>
 </section>
