--- a/src/client/js/components/trip-list/trip-list.component.html
+++ b/src/client/js/components/trip-list/trip-list.component.html
@@ -1,5 +1,8 @@
 <div class="column border border-radius">
-    <h2 id="title" class="list__title bg-primary text-center can-hide-absent hidden"></h2>
+    <div class="list__title bg-primary row">
+            <h2 id="title"></h2>
+            <button id="add-detail-btn" class="alert__button padding-small shadow">Open</button>
+    </div>
     <ul class="list shadow collapsable" id="list">
     </ul>
 </div>
