--- a/src/client/scss/modules/_header.scss
+++ b/src/client/scss/modules/_header.scss
@@ -8,9 +8,16 @@
     font-size: 16px;
   }
 
-  .nav {
-    a {
-      color: $color-primary-contrast;
+  .header__anchor {
+    color: $color-primary-contrast;
+    &.header__anchor--back {
+      font-size: 1.5em;
+    }
+
+    &.visited {
+      color: black !important;
+      background-color: rgb(240,240,240) !important;
+      @extend .shadow
     }
   }
 }
