Refactor detail page

--- a/src/client/js/components/detail-page/detail-page.component.html
+++ b/src/client/js/components/detail-page/detail-page.component.html
@@ -1,9 +1,4 @@
-<section class="can-hide-absent hidden page" id="detail-page">
-  <div id="detail-title" class="bg-primary alert">
-    <p>
-      Selected trip
-    </p>
-  </div>
+<section class="can-hide-absent column hidden" id="detail-page">
   <trip-card id="detail-card"></trip-card>
   <trip-list id="weather-list"></trip-list>
   <div id="detail-deleted" class="can-hide-present hidden alert bg-danger">
