Refactor, remove redundant elements

--- a/src/client/js/components/home-page/home-page.component.html
+++ b/src/client/js/components/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<section class="can-hide-absent hidden page">
+<section class="can-hide-absent hidden">
   <div id="empty-container" class="column can-hide-absent">
     <div class="alert">
       <p>Seems like you have no trip planned!</p>
@@ -7,9 +7,6 @@
       <p>Start by creating a new trip!</p>
     </div>
     <a href="#add" class="bg-primary alert"> Add trip </a>
-  </div>
-  <div id="home-title" class="can-hide-absent hidden bg-primary alert">
-    <p>Your trips</p>
   </div>
   <div id="card-container"></div>
 </section>
