--- a/src/client/js/components/trip-list/trip-list.component.html
+++ b/src/client/js/components/trip-list/trip-list.component.html
@@ -1,7 +1,7 @@
 <div class="column border border-radius">
     <div class="list__title bg-primary row">
             <h2>Trip details</h2>
-            <button id="toggle-btn" class="alert__button padding-small shadow">Open</button>
+            <button id="toggle-btn" class="alert__button padding-small shadow border">Open</button>
     </div>
     <ul class="list shadow collapsable" id="list">
     </ul>
