--- a/src/client/scss/modifiers/_modifiers.scss
+++ b/src/client/scss/modifiers/_modifiers.scss
@@ -8,6 +8,7 @@
     opacity: 1;
   }
 }
+
 .can-hide-absent {
 
   &.hidden {
@@ -118,6 +119,8 @@
 .page {
   height: 100%;
   width: 100%;
+  overflow-y: scroll;
+  @include flex(column, start, center);
 }
 
 .column {
@@ -128,8 +131,4 @@
 
 .row {
   @include flex(row, space-between, center)
-}
-.responsive-container {
-  width: 100%;
-  max-width: 500px;
 }
