--- a/src/client/js/components/dialog/dialog.component.scss
+++ b/src/client/js/components/dialog/dialog.component.scss
@@ -8,6 +8,8 @@
   left: 0;
   background-color: rgba(0,0,0,0.5);
   opacity: 1;
+  transform: translateZ(0);
+  z-index: 999;
 
   .dialog__container {
     @extend .border;
