Improve accessibility, fix bug in details event handler

--- a/src/client/js/components/detail-page/detail-page.component.html
+++ b/src/client/js/components/detail-page/detail-page.component.html
@@ -1,4 +1,4 @@
-<section class="can-hide-absent column hidden" id="detail-page">
+<section class="can-hide-absent column hidden">
   <trip-card id="detail-card"></trip-card>
   <trip-list id="weather-list"></trip-list>
   <div id="detail-deleted" class="can-hide-present hidden alert bg-danger">
