(fix) Add animation fixes

--- a/src/client/js/components/detail-page/detail-page.component.html
+++ b/src/client/js/components/detail-page/detail-page.component.html
@@ -1,6 +1,6 @@
 <section class="can-hide-absent column hidden">
   <trip-card id="detail-card"></trip-card>
-  <trip-list id="weather-list"></trip-list>
+  <trip-list id="detail-list" class="slideInRight"></trip-list>
   <div id="detail-deleted" class="can-hide-present hidden alert bg-danger">
     <a href="#home">
       You deleted this trip! Go back to the home page
