--- a/src/client/js/components/home-page/home-page.component.html
+++ b/src/client/js/components/home-page/home-page.component.html
@@ -5,5 +5,5 @@
     </div>
     <a href="#add" class="bg-primary alert"> Add trip </a>
   </div>
-  <div id="card-container"></div>
+  <div id="card-container" class="alternateSlideInChildren"></div>
 </section>
