--- a/src/client/js/components/trip-detail/trip-detail.component.html
+++ b/src/client/js/components/trip-detail/trip-detail.component.html
@@ -1,4 +1,4 @@
-<div class="column">
+<div class="column slideInBottom">
   <div class="alert bg-primary shadow row min-width">
     <p>Details</p>
 
@@ -22,7 +22,7 @@
 </div>
 
 <template id="form-control">
-  <div class="detail">
+  <div class="detail slideInTop">
     <div class="row">
       <select aria-label="select detail type" class="detail__type" required>
         <option value="todo">Todo</option>
