feat(template-binding): Add simple binding for element attributes

--- a/src/client/js/components/trip-form/trip-form.component.html
+++ b/src/client/js/components/trip-form/trip-form.component.html
@@ -1,7 +1,7 @@
 <form name="text-entry" autocomplete="off" class="form">
 
   <label class="color-primary margin-small" for="name">Name</label>
-  <input type="text" class="shadow" name="name" id="name" required/>
+  <input type="text" class="shadow" name="name" id="name" value={{nameObj.name}} required/>
 
   <label class="color-primary margin-small" for="location">Destination</label>
   <input type="text" class="shadow" name="location" id="location" required/>
