wip for bound 1

--- a/src/client/js/components/trip-form/trip-form.component.html
+++ b/src/client/js/components/trip-form/trip-form.component.html
@@ -1,7 +1,14 @@
 <form name="text-entry" autocomplete="off" class="form">
+  <div  for-bound={{forBoundValue}}>
+    {{currentForBound}}
 
-  <label class="color-primary margin-small" for="name">Name</label>
-  <input type="text" class="shadow" name="name" id="name" value={{nameObj.name}} required/>
+    <!-- <label class="color-primary margin-small" for="name" >Name</label>
+    <input type="text" class="shadow" name="name" id="name" value={{nameObj.name}} required/> -->
+  </div>
+  <!-- <div>
+    <label class="color-primary margin-small" for="name" >Name</label>
+    <input type="text" class="shadow" name="name" id="name" value={{nameObj.name}} required/>
+  </div>
 
   <label class="color-primary margin-small" for="location">Destination</label>
   <input type="text" class="shadow" name="location" id="location" required/>
@@ -12,5 +19,5 @@
   <label class="color-primary margin-small" for="end-date">End date</label>
   <input type="date" class="shadow" name="end-date" id="end-date" required/>
 
-  <button id="submit" type="submit" class="bg-primary padding-medium margin-medium shadow">Create trip</button>
+  <button id="submit" type="submit" class="bg-primary padding-medium margin-medium shadow">Create trip</button> -->
 </form>
